# devcontainer-repo

./: .bashrc  .env.sample  .gitignore  .gitmodules  .zshrc  ARCHITECTURE.md  CHANGELOG-2025-10-18.md  CONTRIBUTING.md  DEBUGGING-GUIDE-TEMPLATE.md  DEBUGGING-GUIDE.md  DOCUMENTATION-SUMMARY.md  DockerFile  Dockerfile  GIT FLOW DEVELOPER ALIASES and COMMANDS.md  GIT FLOW DEVELOPER SCENARIO CHEAT SHEET.md  GIT FLOW DEVELOPER SCENARIO GUIDE.md  INDEX.md  PROJECT-SETUP.md  QUICK-START.md  README.md  Readme.md  TROUBLESHOOTING-TEMPLATE.md  WORKFLOWS-DETAILED-GUIDE.md  WORKFLOWS-QUICK-REFERENCE.md  WORKTREE-GUIDE-TEMPLATE.md  devcontainer.json  devcontainerlinks.sh  docker-compose-devcontainer-sample.yml  docker-compose.sample.env  docker-compose.yml  git_workflow_guide_scripts.sh  init-project.sh  pyproject.toml  s_build_dev_container.sh  s_dump_extensions.sh  secrets_scanner.py  secrets_scanner2.py  secrets_scanner_bash_original.sh  secrets_scanner_simple.py  setup_pnpm.sh  (+3 more)
legacy/: .bashrc  .zshrc  DevContainerSetup.md  Docker Environment Instructions - Multi-Host.md  ManagingSourceControl.md  devcontainer.json  docker-compose-devcontainer-sample.yml  docker-compose.yml  git_workflow_full_guide.md  git_workflow_migrate_mono_repo.sh  pyproject.toml  secrets_findings.yaml  secrets_scan_fingerprints.txt  update_dependencies.sh  vscode_extensions.json
legacy_backup_20250906_055530/: .env.sample  Dockerfile  activate_venv.sh  docker-compose.yml  git_workflow_migrate_mono_repo_dry_run.sh  git_workflow_summary.md  init-project.sh  migrate-to-modern-devcontainer.sh  setup-ssh.sh  (+2 more)
(+36 files in other folders)
