[project]
name = "devcontainer"
version = "0.1.0"
description = "Development Container (in case packages need to be installed for running tools independently)"
package-mode=false
authors = [
    {name = "Joe Demian"}
]
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

# [tool.poetry]
# packages = [{include = "devcontainer"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
